...
            <point key="canvasLocation" x="-340" y="-46"/>
        </scene>
        <!--Schedule-->
        <scene sceneID="dDP-M2-jQe">
            <objects>
                <navigationController id="MFq-dY-1Pa" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Schedule" image="schedule_tab_icon" id="VPZ-9M-KMO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gns-gc-W1d">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="kgX-1g-hmH" kind="relationship" relationship="rootViewController" id="CFK-ii-ZuM"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UXg-hA-L1N">
                                                    <rect key="frame" x="15" y="0.0" width="325" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <attributedString key="attributedText">
                                                        <fragment content="Select Patient">
                                                            <attributes>
                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="0.68123891843971629" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <font key="NSFont" size="16" name="HelveticaNeue"/>
                                                            </attributes>
                                                        </fragment>
                                                    </attributedString>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="Wbt-ir-piV" id="oZM-nv-noH"/>
                            <outlet property="delegate" destination="Wbt-ir-piV" id="9I3-7Z-wlY"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Appointment" id="Jj7-fp-LvQ">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="gt9-jg-f4l">
                            <connections>
                                <action selector="onDonePressed:" destination="Wbt-ir-piV" id="GjN-IJ-UqW"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="gS4-fB-3Q6" id="Tc9-YG-MWu"/>
                            <outlet property="delegate" destination="gS4-fB-3Q6" id="B68-Fs-GjC"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Patients" id="VTm-ko-mso">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yyT-t0-41w">
                            <connections>
                                <segue destination="eav-U1-z3x" kind="show" identifier="AddPatientSegue" id="vCP-iU-K5O"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
