...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="kDJ-Jw-CsP" id="xdu-jY-dOV"/>
                            <outlet property="delegate" destination="kDJ-Jw-CsP" id="ojw-IY-Ts3"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Procedures" id="bHa-p4-iV9"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="khI-j0-V6f" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="259" y="412"/>
        </scene>
...
