...
        viewController.createAppointmentViewController = self;
    }
}

- (IBAction)nextButtonClicked:(id)sender {
    if (self.startDateField.isFirstResponder) {
        self.nextButton.title = @"Done";
        [self.endDateField becomeFirstResponder];
    } else if (self.endDateField.isFirstResponder) {
        self.nextButton.title = @"Next";
        [self.endDateField resignFirstResponder];
    }
}
...
